app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-rule
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: cert-manager-global
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "app.artem-bebik.com"
      secretName: tls-secret
  rules:
    - host: "app.artem-bebik.com"
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: web
                port:
                  number: 80
